--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         </div>
     </section>
 
-    <!---------------------------------------------------------- Parallax---------------------------------------------------------->
+    <!----------------------------------------------------- Parallax------------------------------------------------------->
 
     <div class="section-parallax">
         <p class="txt-par">RIGUEUR</p>
@@ -379,14 +379,17 @@
         <p class="txt-par">CURIOSITÉ </p>
     </div>
 
-    <!---------------------------------------------------------- Contact ---------------------------------------------------------->
+    <!---------------------------------------------------- Contact ------------------------------------------------------->
 
     <section class="section-contact" id="contact">
 
-        <h2><span>Prenons</span> contact</h2>
+        <h2><span>Contacter</span> moi : <a href="mailto:jerome.arnoult@proton.me">jerome.arnoult@proton.me</a></h2>
+
+        
 
         <div class="container-form">
-            <form action="" class="form-bloc">
+           
+            <!-- <form action="" class="form-bloc">
 
                 <div class="form-groupe">
                     <label for="prenom">Prénom</label>
@@ -402,7 +405,7 @@
                 <div class="form-groupe">
                     <input type="submit" value="ENVOYER" class="button-sub">
                 </div>
-            </form>
+            </form> -->
         </div>
 
     </section>
