--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="blocs-menu">
             <div class="logo-cercle">
-                <img src="ressources/contact.svg" alt="logo contact">
+                <a href="mailto:jerome.arnoult@proton.me"><img src="ressources/contact.svg" alt="logo contact"></a>
             </div>
         </div>
 
@@ -384,8 +384,6 @@
     <section class="section-contact" id="contact">
 
         <h2><span>Contacter</span> moi : <a href="mailto:jerome.arnoult@proton.me">jerome.arnoult@proton.me</a></h2>
-
-        
 
         <div class="container-form">
            
