--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
     <section class="section-contact" id="contact">
 
-        <h2><span>Contacter</span> moi : <a href="mailto:jerome.arnoult@proton.me">jerome.arnoult@proton.me</a></h2>
+        <h2><span>Contactez</span> moi : <a href="mailto:jerome.arnoult@proton.me">jerome.arnoult@proton.me</a></h2>
 
         <div class="container-form">
            
