Ajout images CLickable section portfolio

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
     </section>
 
-    <!-------------------------------------------------- Portfolio -------------------------------------------------------->
+    <!--------------------- Portfolio --------------------------------->
 
     <section class="portfolio" id="port">
 
@@ -181,7 +181,7 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/clicknfun.avif" alt="img portfolio">
+                    <img src="ressources/clicknfun.avif" alt="img portfolio" >
                 </div>
                 <h3>Click-n-Fun</h3>
                 <p>Projet de groupe dans le cadre de la formation,  organisation de sorties. Réalisé avec Symfony</p>
@@ -204,6 +204,29 @@
                 <h3>Messagerie</h3>
                 <p>Projet Angular</p>
                 <a href="https://github.com/JeromeArnoult/tpMessagerieV2" target="blank" class="btn-projets">Découvrez le projet</a>
+            </div>
+
+            <div class="item vague1">
+                <div class="cont-img-port">
+                    <img src="ressources/BlogNodeJsPetFriend.avif" alt="img portfolio">
+                </div>
+                <h3>Blog PetFriend</h3>
+                <p>Projet NodeJs/Express (En cours)</p>
+                <a href="https://github.com/JeromeArnoult/NodeJs-Blog.git" target="blank" class="btn-projets">Découvrez le projet</a>
+            </div>
+            <div class="item vague1">
+                <div class="cont-img-port">
+                    <img src="ressources/Tee_DevDetailArticle.avif" alt="img portfolio" >
+                </div>
+                <h3>Tee Dev (Site e-commerce fictif)</h3>
+                <p>Projet Symfony</p>
+                <a href="https://github.com/TonyMascate/projetstage-eni.git" target="blank" class="btn-projets">Découvrez le projet</a>
+            </div>
+             <!-- Conteneur pour l'image agrandie -->
+            <div id="modal" class="modal">
+                <span class="close">&times;</span>
+                <img class="modal-content" id="img-agrandie">
+                <div id="caption"></div>
             </div>
 
         </div>
