Description des images

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/clicknfun.avif" alt="img portfolio" >
+                    <img src="ressources/clicknfun.avif" alt="Page de connexion Click-n-Fun" >
                 </div>
                 <h3>Click-n-Fun</h3>
                 <p>Projet de groupe dans le cadre de la formation,  organisation de sorties. Réalisé avec Symfony</p>
@@ -190,7 +190,7 @@
                 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/bucket_list.png" alt="img portfolio">
+                    <img src="ressources/bucket_list.png" alt="Page d'inscription de l'application Bucket-List">
                 </div>
                 <h3>Bucket-list</h3>
                 <p>Projet symfony</p>
@@ -199,7 +199,7 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/messagerie.avif" alt="img portfolio">
+                    <img src="ressources/messagerie.avif" alt="Système de chat avec Angular">
                 </div>
                 <h3>Messagerie</h3>
                 <p>Projet Angular</p>
@@ -208,15 +208,15 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/BlogNodeJsPetFriend.avif" alt="img portfolio">
+                    <img src="ressources/BlogNodeJsPetFriend.avif" alt="Page d'accueil du blog Pet Friends">
                 </div>
-                <h3>Blog PetFriend</h3>
+                <h3>Blog PetFriends</h3>
                 <p>Projet NodeJs/Express (En cours)</p>
                 <a href="https://github.com/JeromeArnoult/NodeJs-Blog.git" target="blank" class="btn-projets">Découvrez le projet</a>
             </div>
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/Tee_DevDetailArticle.avif" alt="img portfolio" >
+                    <img src="ressources/Tee_DevDetailArticle.avif" alt="Page de détail d'un article du projet Tee-Dev" >
                 </div>
                 <h3>Tee Dev (Site e-commerce fictif)</h3>
                 <p>Projet Symfony</p>
