Oprimisation Best Practice

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
     </section>
 
-    <!--------------------------------------- Expériences --------------------------------------------------------->
+    <!------------------------ Expériences ----------------------------------------->
        
     <section class="travail-exp" id="exp">
 
@@ -324,7 +324,7 @@
                    <a href="https://www.fev.com/" target="_blank"> <img src="ressources/fev.ico" alt="icone Fav/d2T"></a>
                 </div>
                 <div class="boule-ico">
-                    <a href="#"><img src="ressources/arrow_top.png" alt="icone avion"></a>
+                    <a href="#"><img src="ressources/arrow_top.png" alt="icone flèche"></a>
                 </div>
             </div>
             
