Barre de progression au scroll

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <!-- TODO : Liens pour la partie portfolio -->
 <!-- TODO : templateBack -->
 <body>
+    <!-- Barre de progression au scroll -->
+    <div class="progress-container">
+        <div class="progress-bar" id="progress-bar"></div>
+    </div>
 
     <!-- Bouton gauche menu mobile -->
 
