--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
             <div class="flex-cont-bloc-exp">
                 <div class="bloc bloc1">
                     <div class="contenu-bloc">
-                        <p class="titre-section-bloc"><a target="_blank"  href="https://www.abc-conception.com/">ABC Conception</a>, 2024</p><br>
-                        <p class="txt-section">Stage Développeur Web :<br><br></p>
+                        <p class="titre-section-bloc"><a target="_blank"  href="https://www.abc-conception.com/">ABC Conception</a>, 2024</p>
+                        <p class="txt-section">Stage Développeur Web :</p>
                         <ul>
                             <li>Back-end en PHP/Symfony</li>
                             <li>Front-end dynamique avec Twig et Javascript</li>
@@ -350,9 +350,9 @@
                 <div class="bloc bloc1">
                     <div class="contenu-bloc">
                         <p class="titre-section-bloc"><a target="_blank"  href="https://www.eni-ecole.fr/">ENI école informatique</a>, 2023 - 2024</p><br>
-                        <p class="txt-section">Projets informatiques    développés à l’ENI Ecole Informatique :<br><br>
+                        <p class="txt-section">Projets informatiques    développés à l’ENI Ecole Informatique :<br>
                             Développement d’un site d’enchères sous Java EE et SQL Server :<br>
-                            application web organisée en couches.<br><br>
+                            application web organisée en couches.
                             Analyse, conception et développement d’un site d’organisation d’évènements
                             avec PHP et MySQL : définition de tests et d’outils de passage des tests.</p>
                     </div>
