Ajout Meta google

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name ="description" content="Portfolio de Jérôme Arnoult, présentation expériences">
+    <meta name="google-site-verification" content="mz22WpMdv1gGrDhNQWC-3zaOTXFQIiXfHALbqRUIf" />
+
     <link rel="stylesheet" href="style.css">
    
     <title>Portfolio_Jérôme</title>
