--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name ="description" content="Portfolio de Jérôme Arnoult, présentation expériences">
+    <meta name="description" content="Portfolio de Jérôme Arnoult, développeur web spécialisé en front-end, back-end et SEO. Découvrez ses projets et compétences.">
     <meta name="google-site-verification" content="_EGHFC_JiAJiQNgmBqrKfPGXvRyGy1te-2x9XpfWt6g" />
 
     <link rel="stylesheet" href="style.css">
    
-    <title>Portfolio_Jérôme</title>
+    <title>Portfolio de Jérôme Arnoult - Développeur Web</title>
 </head>
 <!-- TODO : Liens pour la partie portfolio -->
 <!-- TODO : templateBack -->
@@ -90,9 +90,8 @@
 
     <section class="accueil" id="accueil">
 
-        <h1>Bienvenue sur mon Portfolio</h1>
-
-        <p class="txt-animation"></p>
+        <h1>Portfolio de Jérôme Arnoult</h1> <p class="txt-animation"></p>
+        <p>Je suis Jérôme Arnoult, un développeur web passionné par le front-end, le back-end et le SEO. <br>Explorez mes projets et expériences professionnelles dans le domaine du développement web.</p>
 
         <a href="#port" class="btn-acc btnacc1">Portfolio</a>
         <a href="#exp" class="btn-acc btnacc2">Expériences</a>
