--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio de Jérôme Arnoult, développeur web spécialisé en front-end, back-end et SEO. Découvrez ses projets et compétences.">
     <meta name="google-site-verification" content="_EGHFC_JiAJiQNgmBqrKfPGXvRyGy1te-2x9XpfWt6g" />
+    
 
     <link rel="stylesheet" href="style.css">
    
     <title>Portfolio de Jérôme Arnoult - Développeur Web</title>
+    
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Portfolio de Jérôme Arnoult - Développeur Web" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jeromearnoult.vercel.app/" />
+    <meta property="og:image" content="https://jeromearnoult.vercel.app/ressources/profil2.avif" />
+    <meta property="og:description" content="Découvrez le portfolio de Jérôme Arnoult, développeur web spécialisé en front-end, back-end, et SEO. Explorez ses projets et compétences." />
+    <meta property="og:site_name" content="Jérôme Arnoult Portfolio" />
+    <meta property="og:locale" content="fr_FR" />
+
+    <!-- X Card meta tags (for better Twitter sharing) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portfolio de Jérôme Arnoult - Développeur Web" />
+    <meta name="twitter:description" content="Explorez les projets et compétences de Jérôme Arnoult, développeur web spécialisé en front-end, back-end, et SEO." />
+    <meta name="twitter:image" content="https://jeromearnoult.vercel.app/ressources/profil2.avif" />
+    <meta name="twitter:url" content="https://jeromearnoult.vercel.app/" />
 </head>
 <!-- TODO : Liens pour la partie portfolio -->
 <!-- TODO : templateBack -->
