--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="description" content="Portfolio de Jérôme Arnoult, développeur web spécialisé en front-end, back-end et SEO. Découvrez ses projets et compétences.">
     <meta name="google-site-verification" content="_EGHFC_JiAJiQNgmBqrKfPGXvRyGy1te-2x9XpfWt6g" />
     
-
     <link rel="stylesheet" href="style.css">
    
     <title>Portfolio de Jérôme Arnoult - Développeur Web</title>
-    
+
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Portfolio de Jérôme Arnoult - Développeur Web" />
     <meta property="og:type" content="website" />
@@ -108,7 +107,7 @@
     <section class="accueil" id="accueil">
 
         <h1>Portfolio de Jérôme Arnoult</h1> <p class="txt-animation"></p>
-        <p>Je suis Jérôme Arnoult, un développeur web passionné par le front-end, le back-end et le SEO. <br>Explorez mes projets et expériences professionnelles dans le domaine du développement web.</p>
+        <p>Je suis Jérôme Arnoult, un développeur web passionné par le front-end, le back-end et le SEO. <br>Explorez mes projets et expériences professionnelles.</p>
 
         <a href="#port" class="btn-acc btnacc1">Portfolio</a>
         <a href="#exp" class="btn-acc btnacc2">Expériences</a>
