--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         d’études automobiles, j’ai pris la décision de changer
                         de cap et de m’épanouir dans un nouveau domaine.
                         Durant ma carrière, j'ai particulièrement pris plaisir à
-                        créer des outils pour les autres, methode de réparation, outils Excel, méthode de fabrication ...<br>
+                        créer des outils pour les autres, méthode de réparation, outils Excel, méthode de fabrication ...<br>
                         Démontrant ainsi ma capacité à
                         développer des solutions pratiques et efficaces pour
                         les autres. Passionné par le numérique et les
