Ajout du FavIcon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio de Jérôme Arnoult, développeur web spécialisé en front-end, back-end et SEO. Découvrez ses projets et compétences.">
     <meta name="google-site-verification" content="_EGHFC_JiAJiQNgmBqrKfPGXvRyGy1te-2x9XpfWt6g" />
-    
+    <link rel="icon" href="ressources/faviconJA.ico">
     <link rel="stylesheet" href="style.css">
    
     <title>Portfolio de Jérôme Arnoult - Développeur Web</title>
