--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfolio de Jérôme Arnoult, développeur web spécialisé en front-end, back-end et SEO. Découvrez ses projets et compétences.">
     <meta name="google-site-verification" content="_EGHFC_JiAJiQNgmBqrKfPGXvRyGy1te-2x9XpfWt6g" />
     <link rel="icon" href="ressources/faviconJA.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleMinify.css">
    
     <title>Portfolio de Jérôme Arnoult - Développeur Web</title>
 
