--- a/index.html
+++ b/index.html
@@ -469,6 +469,6 @@
     </footer>
     <!-- librairie TypeWriter -->
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="app.js"></script>
+    <script src="appMinify.js"></script>
 </body>
 </html>
