--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <a href="https://www.eni-ecole.fr/ecole/campus-en-ligne/" target="_blank"><img src="ressources/eni-group-home.png" alt="icone ENI"></a>
                 </div>
                 <div class="boule-ico">
-                    <a href="https://www.tecalemit.com/en/" target="_blank"><img src="ressources/tecalimite.png" alt="icone tecalemit"></a>
+                    <img src="ressources/tecalimite.png" alt="icone tecalemit">
                 </div>
                 <div class="boule-ico">
                     <a href="https://distributeur.groupauto.fr/fr" target="_blank"><img src="ressources/groupeAuto.png" alt="icone GroupAuto"></a>
@@ -376,7 +376,7 @@
                 </div>
                 <div class="bloc bloc2">
                     <div class="contenu-bloc">
-                        <p class="titre-section-bloc"><a target="_blank" href="https://www.tecalemit.com/">TECALEMIT</a> Flexibles, 2020 - 2022</p><br>
+                        <p class="titre-section-bloc">TECALEMIT Flexibles, 2020 - 2022</p><br>
                         <p class="txt-section">Fabrication de tubes extrudés en polyamide
                             Mise au point de nouvelles productions
                             Organisation et planification des productions
