--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio de Jérôme Arnoult, développeur web spécialisé en front-end, back-end et SEO. Découvrez ses projets et compétences.">
     <meta name="google-site-verification" content="_EGHFC_JiAJiQNgmBqrKfPGXvRyGy1te-2x9XpfWt6g" />
-    <link rel="icon" href="ressources/faviconJA.ico">
+    <link rel="icon" href="ressources/faviconJA-removebg-preview32px.png">
     <link rel="stylesheet" href="styleMinify.css">
    
     <title>Portfolio de Jérôme Arnoult - Développeur Web</title>
@@ -465,7 +465,9 @@
     </section>
 </main>
     <footer>
-        &copy; - Tous Droits réservés 
+        <div class="foot">
+            <img src="ressources/faviconJA-removebg-preview32px.png" alt="Icone Jérôme Arnoult"><p>&ensp;  &copy; - Tous Droits réservés </p>
+         </div><!--.foot -->
     </footer>
     <!-- librairie TypeWriter -->
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
