Correction faute de frappe

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
     <section class="section-range" id="range">
 
-        <h class="titre-exp">Mes compétences</h>
+        <h2 class="titre-exp">Mes compétences</h2>
 
         <div class="grille-skill">
 
