--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio de Jérôme Arnoult, développeur web spécialisé en front-end, back-end et SEO. Découvrez ses projets et compétences.">
     <meta name="google-site-verification" content="_EGHFC_JiAJiQNgmBqrKfPGXvRyGy1te-2x9XpfWt6g" />
+    <meta name="robots" content="index, follow">
     <link rel="icon" href="ressources/faviconJA-removebg-preview32px.png">
+    <link rel="icon" href="ressources/faviconJA-removebg-preview64px.png">
     <link rel="stylesheet" href="styleMinify.css">
    
     <title>Portfolio de Jérôme Arnoult - Développeur Web</title>
@@ -44,7 +46,7 @@
     
     <!-- Navigation verticale -->
 
-    <nav class="nav-gauche">
+    <nav aria-label="Navigation principale" class="nav-gauche">
 
         <div class="blocs-menu">
             <div class="cercle-portrait">
