--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/clicknfun.avif" alt="Page de connexion Click-n-Fun" >
+                    <img src="ressources/clicknfun.avif" alt="Page de connexion de l'application Click-n-Fun" >
                 </div>
                 <h3>Click-n-Fun</h3>
                 <p>Projet de groupe dans le cadre de la formation,  organisation de sorties. Réalisé avec Symfony</p>
@@ -220,7 +220,7 @@
 
             <div class="item vague1">
                 <div class="cont-img-port">
-                    <img src="ressources/messagerie.avif" alt="Système de chat avec Angular">
+                    <img src="ressources/messagerie.avif" alt="Page de l'application messagerie, système de chat fait avec le framework Angular">
                 </div>
                 <h3>Messagerie</h3>
                 <p>Projet Angular</p>
