--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio de Jérôme Arnoult, développeur web spécialisé en front-end, back-end et SEO. Découvrez ses projets et compétences.">
+    <meta name="keywords" content="développeur web, développement web, portfolio développeur, front-end, back-end, HTML, CSS, JavaScript, React, SEO, création de sites web, design web, optimisation SEO">
+
     <meta name="google-site-verification" content="_EGHFC_JiAJiQNgmBqrKfPGXvRyGy1te-2x9XpfWt6g" />
     <meta name="robots" content="index, follow">
     <link rel="icon" href="ressources/faviconJA-removebg-preview32px.png">
