--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <section class="accueil" id="accueil">
 
         <h1>Portfolio de Jérôme Arnoult</h1> <p class="txt-animation"></p>
-        <p>Je suis Jérôme Arnoult, un développeur web passionné par le front-end, le back-end et le SEO. <br>Explorez mes projets et expériences professionnelles.</p>
+        <p>Je suis Jérôme Arnoult, un <strong>développeur web</strong> passionné par le front-end, le back-end et le SEO. <br>Explorez mes projets et expériences professionnelles.</p>
 
         <a href="#port" class="btn-acc btnacc1">Portfolio</a>
         <a href="#exp" class="btn-acc btnacc2">Expériences</a>
@@ -167,8 +167,7 @@
                     <p>Après une riche expérience de 15 ans en bureau
                         d’études automobiles, j’ai pris la décision de changer
                         de cap et de m’épanouir dans un nouveau domaine.
-                        Durant ma carrière, j'ai particulièrement pris plaisir à
-                        créer des outils pour les autres, méthode de réparation, outils Excel, méthode de fabrication ...<br>
+                        Durant ma carrière j'ai particulièrement pris plaisir à créer des outils pour les autres :  méthode de réparation, outils Excel, méthode de fabrication ...<br>
                         Démontrant ainsi ma capacité à
                         développer des solutions pratiques et efficaces pour
                         les autres. Passionné par le numérique et les
@@ -409,7 +408,7 @@
                 <div class="bloc bloc4">
                     <div class="contenu-bloc">
                         <p class="titre-section-bloc"><a target="_blank" href="https://www.bertrandt.com/">BERTRANDT</a>, 2017 - 2019</p><br>
-                        <p class="txt-section">Analyse de des pièces incidentées en retours garantie du réseau.
+                        <p class="txt-section">Analyse des pièces incidentées en retours garantie du réseau.
                             Contrôle conformité des process usine et fournisseur.
                             Montage des pièces incidentés sur véhicule pour essai routier, piste et banc climatique.
                             Gestion des dossiers d'incidents, suivi des indicateurs qualité avec la direction, le bureau
@@ -421,10 +420,8 @@
                 <div class="bloc bloc5">
                     <div class="contenu-bloc">
                         <p class="titre-section-bloc"><a target="_blank" href="https://www.bertrandt.com/">NBTech</a>, 2014 - 2017</p><br>
-                        <p class="txt-section">Essais statiques destructif sur les éléments de structure, caisse et ouvrant selon procédures, cahier des charges et procédures de sécurité
-                            Validation fonction remorquage UTAC, mesure physique, torsion,flexion, raideur.
-                            Gestion des consommables, matériel de mesures et pièces de rechange
-                            Rédaction des comptes rendu d'essai.</p>
+                        <p class="txt-section">Essais statiques destructif sur les éléments de structure, caisse et ouvrant selon procédures, cahier des charges et procédures de sécurité.
+                            Validation fonction remorquage UTAC, mesure physique, torsion,flexion, raideur. Gestion des consommables, matériel de mesures et pièces de rechange. Rédaction des comptes rendu d'essai.</p>
                     </div>
                 </div>
                 <div class="bloc bloc6">
